@@ -1,5 +1,6 @@
 package io.github.lianweimao.xxl.job.autoregistry.config;
 
+import cn.hutool.core.util.StrUtil;
 import cn.hutool.extra.spring.SpringUtil;
 import io.github.lianweimao.xxl.job.autoregistry.api.XxlJobService;
 import io.github.lianweimao.xxl.job.autoregistry.annotation.XxlJobAutoRegistry;
@@ -21,6 +22,7 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -60,7 +62,7 @@ public class AutoRegistryWorker {
                 return;
             }
             if (timeoutSeconds > 0 && System.currentTimeMillis() - startTime > timeoutSeconds * 1000) {
-                throw new IllegalStateException("JOB服务持续[%d]秒没有就绪".formatted(timeoutSeconds));
+                throw new IllegalStateException(String.format("JOB服务持续[%d]秒没有就绪",timeoutSeconds));
             }
         }
     }
@@ -95,8 +97,8 @@ public class AutoRegistryWorker {
                 XxlJobInfoDTO xxlJobInfoDTO = new XxlJobInfoDTO()
                         .setJobGroup(xxlJobGroup.getId())
                         .setJobDesc(xxlJobAutoRegistry.desc())
-                        .setAuthor("来自%s的定时任务".formatted(appname))
-                        .setAlarmEmail(null)
+                        .setAuthor(Optional.ofNullable(xxlJobAutoRegistry.author()).filter(StrUtil::isNotBlank).orElseGet(() -> String.format("来自%s的定时任务",appname)))
+                        .setAlarmEmail(Optional.ofNullable(xxlJobAutoRegistry.alarmEmail()).filter(StrUtil::isNotBlank).orElse(null))
                         .setScheduleType(xxlJobAutoRegistry.scheduleType())
                         .setScheduleConf(xxlJobAutoRegistry.conf())
                         .setMisfireStrategy(xxlJobAutoRegistry.misfireStrategy())
